one: Increment release number of document

--- a/libraries/one/sun234.tex
+++ b/libraries/one/sun234.tex
@@ -17,9 +17,9 @@
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {234.4}
+\newcommand{\stardocnumber}    {234.5}
 \newcommand{\stardocauthors}   {R.T.Platon \& T. Jenness}
-\newcommand{\stardocdate}      {12th May 2011}
+\newcommand{\stardocdate}      {3rd December 2013}
 \newcommand{\stardoctitle}     {ONE -- Odds and Ends Library}
 \newcommand{\stardocversion}   {Version 1.4}
 \newcommand{\stardocmanual}    {User's Guide}
