hds: Put PWD on SUN/92 and also update stardocversion

--- a/libraries/hds/sun92.tex
+++ b/libraries/hds/sun92.tex
@@ -17,12 +17,12 @@
 {Copyright \copyright\ 2000 Council for the Central Laboratory of the Research Councils}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {92.12}
-\newcommand{\stardocauthors}   {R.F.~Warren-Smith \& M.D.~Lawden}
-\newcommand{\stardocdate}      {23rd February 1999}
+\newcommand{\stardocnumber}    {92.13}
+\newcommand{\stardocauthors}   {R.F.~Warren-Smith\\ M.D.~Lawden\\ P.W.~Draper}
+\newcommand{\stardocdate}      {18th April 2008}
 \newcommand{\stardoctitle}     {HDS\\ [\latex{1ex}]
                                 Hierarchical Data System}
-\newcommand{\stardocversion}   {Version 4.3}
+\newcommand{\stardocversion}   {Version 5.1}
 \newcommand{\stardocmanual}    {Programmer's Manual}
 \newcommand{\stardocabstract}  {
 HDS is a file-based hierarchical data system designed for the storage
