hds: Mention _INT64 in SUN/92
Had missed it in commit 2a30251cac6312ea4e00a86b8822524836281ffe

--- a/libraries/hds/sun92.tex
+++ b/libraries/hds/sun92.tex
@@ -757,6 +757,7 @@ underscore and are \qt{pre-defined} by HDS, as follows:
 \st{HDS Type} & \st{Fortran Type} & \st{Description}\\
 \hline \hline
 \_INTEGER & INTEGER & Integer (signed)\\
+\_INT64 & INTEGER{\astar}8 & 64-bit Integer (signed)\\
 \_REAL & REAL & Single precision\\
 \_DOUBLE & DOUBLE PRECISION & Double precision\\
 \_LOGICAL & LOGICAL & Logical\\
