kappa: astResample can now handle Gaussian kernel and so can wcsalign

--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -50688,11 +50688,9 @@ KAPPA: \htmlref{NDFTRACE}{NDFTRACE},
             scheme is similar to the {\tt "SincCos"} scheme.
 
             \sstitem
-            {\tt "Gauss"} --- Uses the $e^{-kx^2}$ kernel.  This option is only
-            available when rebinning (\emph{i.e.} if REBIN is set to {\tt TRUE}).
-            The FWHM of the Gaussian is given by Parameter PARAMS(2), and
-            the point at which to truncate the Gaussian to zero is given by
-            Parameter PARAMS(1).
+            {\tt "Gauss"} --- Uses the $e^{-kx^2}$ kernel.  The FWHM of the
+            Gaussian is given by Parameter PARAMS(2), and the point at which to
+            truncate the Gaussian to zero is given by Parameter PARAMS(1).
 
          }
          All methods propagate variances from input to output, but the
