hds: Add authors to SUN/92 who have contributed code to HDS
Taking the stance that people who have edited the code in a substantial
way should also be on the SUN, and not just people who wrote the latex.

--- a/libraries/hds/sun92.tex
+++ b/libraries/hds/sun92.tex
@@ -18,7 +18,8 @@
 
 % Variable part - replace [xxx] as appropriate.
 \newcommand{\stardocnumber}    {92.13}
-\newcommand{\stardocauthors}   {R.F.~Warren-Smith\\ M.D.~Lawden\\ P.W.~Draper}
+\newcommand{\stardocauthors}   {R.F.~Warren-Smith\\ M.D.~Lawden\\
+                                B.K.~McIlwrath \\ T.~Jenness\\ P.W.~Draper}
 \newcommand{\stardocdate}      {18th April 2008}
 \newcommand{\stardoctitle}     {HDS\\ [\latex{1ex}]
                                 Hierarchical Data System}
