KAPPA: Correct and update appendix of HDS types.

--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -15,7 +15,7 @@
 \newcommand{\stardocsource}    {sun95.40}
 \newcommand{\stardocnumber}    {95.40}
 \newcommand{\stardocauthors}   {Malcolm J. Currie \& David S. Berry}
-\newcommand{\stardocdate}      {2013 September 10}
+\newcommand{\stardocdate}      {2013 December 6}
 \newcommand{\stardoctitle}     {KAPPA --- Kernel Application Package}
 \newcommand{\stardocversion}   {2.1}
 \newcommand{\stardocmanual}    {User's Guide}
@@ -54340,7 +54340,8 @@ and HDS data types is as follows:
 {\bf HDS Type} & {\bf Number of bytes} & {\bf FORTRAN Type}\\ \hline
 \_DOUBLE & 8 & DOUBLE PRECISION \\
 \_INTEGER & 4 & INTEGER \\
-\_REAL & 8 & REAL \\
+\_INT64 & 8 & INTEGER*8 (non-standard) \\
+\_REAL & 4 & REAL \\
 \_UBYTE & 1 & BYTE \\
 \_BYTE & 1 & BYTE \\
 \_UWORD & 2 & INTEGER*2 \\
