docs: Correct citation typo.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -2832,7 +2832,7 @@ available recipes. General \picard\ options can be accessed by typing
 When your data comes out of the map-maker it is unit of picowatts
 (pW). A flux conversion factor, or FCF, needs to be applied to scale
 your data from units of pW to Janskys. For more information on calibrating
-SCUBA-2 data see Dempsery et al. (2013) \cite{dempsey12}.
+SCUBA-2 data see Dempsey et al. (2013) \cite{dempsey12}.
 \\*\\*
 JAC provides default values for the various FCFs which have been proven
 to be stable. These standard numbers are applied by the pipeline when
