gaia: update documentation for histogram toolbox.
Also add a simple control for the bin width and a few tweaks for edge
conditions.

--- a/applications/gaia/sun214.tex
+++ b/applications/gaia/sun214.tex
@@ -16,12 +16,12 @@
 \newcommand{\stardocsource}    {sun\stardocnumber}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {214.43}
+\newcommand{\stardocnumber}    {214.44}
 \newcommand{\stardocauthors}   {Peter W. Draper,
                                 Norman Gray,
                                 David S. Berry \&
                                 Mark Taylor }
-\newcommand{\stardocdate}      {28nd July 2012}
+\newcommand{\stardocdate}      {16nd January 2014}
 \newcommand{\stardoctitle}     {GAIA --
                                 Graphical Astronomy and Image Analysis Tool}
 \newcommand{\stardocversion}   {4.4-4}
@@ -457,6 +457,11 @@ GAIA provides the following normal ``image display tool'' features:
   view only those parts of your image that correspond to some given values.
   Such masks are produced by the \xref{EXTRACTOR/SExtractor}{sun226}{}
   and \xref{CUPID}{sun255}{} applications.
+
+\item Histograms of the pixel distribution in rectangular regions of the
+  displayed image. This also shows parabolic and gaussian fits to the
+  distribution (mainly for background estimation), as well as allowing the
+  comparison of two regions.
 
 \end{itemize}
 
