smurf: Add definition for parget to sun258.tex

--- a/applications/smurf/docs/sun258/sun258.tex
+++ b/applications/smurf/docs/sun258/sun258.tex
@@ -259,6 +259,7 @@
 \newcommand{\fitsedit}{\xref{\task{fitsedit}}{sun95}{FITSEDIT}}
 \newcommand{\kapdiv}{\xref{\task{div}}{sun95}{DIV}}
 \newcommand{\ndfcopy}{\xref{\task{ndfcopy}}{sun95}{NDFCOPY}}
+\newcommand{\parget}{\xref{\task{parget}}{sun95}{PARGET}}
 \newcommand{\provshow}{\xref{\task{provshow}}{sun95}{PROVSHOW}}
 \newcommand{\thresh}{\xref{\task{thresh}}{sun95}{THRESH}}
 \newcommand{\wcsmosaic}{\xref{\task{wcsmosaic}}{sun95}{WCSMOSAIC}}
