pubs: Add ASCL entries to fellwalker paper

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -171,7 +171,7 @@ Starlink
 \section{Introduction}
 \label{sec:intro}
 
-The CLUMPFIND algorithm \citep{1994Williams} has been widely used for
+The CLUMPFIND algorithm \citep[][ascl:1107.014]{1994Williams} has been widely used for
 decomposing 2- and 3-dimensional data into disjoint clumps of emission,
 each associated with a single significant peak. It is based upon an
 analysis of a set of evenly spaced contours derived from the data array
@@ -271,9 +271,9 @@ they should be ignored.
 
 
 \section{CUPID - an Implementation of FellWalker}
-The Starlink CUPID package \citep{CupidAdass,SUN255} provides
+The Starlink CUPID package \citep[][ascl:1311.007]{CupidAdass,SUN255} provides
 implementations of various clump-finding algorithms, including FellWalker
-and CLUMPFIND. In common with the rest of the Starlink software \citep{StarlinkAdass},
+and CLUMPFIND. In common with the rest of the Starlink software \citep[][ascl:1110.012]{StarlinkAdass},
 the source code for the CUPID package is open-source and is available on github at
 \htmladdnormallink{https://github.com/Starlink}.
 
