pubs: Add placeholder mention of Watson 2010 on fellwalker

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -58,3 +58,11 @@
   publisher =    {ASP},
 }
 
+@MastersThesis{2010Watson,
+  author =       {Mark E. Watson},
+  title =        {Assessing The Performance of Sub-Millimetre Compact Object Detection Algorithms},
+  school =       {University of Hertfordshire},
+  year =         {2010},
+  note =         {\url{http://www.star.herts.ac.uk/~mat/Mark_Watson_MSc_Thesis.pdf}},
+}
+
