--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -366,6 +366,8 @@ the source code for the CUPID package is open-source and is available on github 
 
 \section{Comparing FellWalker and CLUMPFIND}
 
+Include some references to earlier investigations? \citep[e.g.][]{2010Watson}
+
 \subsection{Simulated Data}
 
 \subsection{Real Sub-millimetre Data}
