pubs: remove suffix from filenames in includegraphics

--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -201,7 +201,7 @@ or peak in data-value. The following description of the algorithm uses
 this fell-walking metaphor at frequent intervals.
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{fellwalking.png}
+\includegraphics[width=\columnwidth]{fellwalking}
 \caption{In 2-dimensions, peaks in data value are reminiscent of the
 fells of northern England. The FellWalker algorithm performs many walks
 starting at various low-land pixels, and for each one follows a line of steepest ascent
@@ -305,14 +305,14 @@ spike. The walk then ``jumps across the gap'' and continues from the
 highest pixel found in the box.
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{sim.pdf}
+\includegraphics[width=\columnwidth]{sim}
 \caption{A 50x50 array of artificial data used to illustrate the
 FellWalker algorithm below.}
 \label{fig:sim}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{walks.pdf}
+\includegraphics[width=\columnwidth]{walks}
 \caption{Two walks up a peak within the artificial data shown in
 Fig.~\ref{fig:sim}. The contours show
 the data values themselves. The white pixels are below the nominated threshold,
@@ -342,7 +342,7 @@ in Fig.~\ref{fig:sim}. The final CAA produced by the above process for
 this data is shown in Fig.~\ref{fig:rawmask}.
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{rawmask.pdf}
+\includegraphics[width=\columnwidth]{rawmask}
 \caption{The raw clump mask created for the artificial data shown in
 Fig.~\ref{fig:sim}. Two clumps are found, indicated by the black and grey
 pixels.}
