pubs: Add a note to fellwalker paper

--- a/pubs/fellwalker/fellwalker.bib
+++ b/pubs/fellwalker/fellwalker.bib
@@ -66,3 +66,37 @@
   note =         {\url{http://www.star.herts.ac.uk/~mat/Mark_Watson_MSc_Thesis.pdf}},
 }
 
+@ARTICLE{2012PASA...29..301W,
+   author = {{Westerlund}, S. and {Harris}, C. and {Westmeier}, T.},
+    title = "{Assessing the Accuracy of Radio Astronomy Source-Finding Algorithms}",
+  journal = pasa,
+archivePrefix = "arXiv",
+   eprint = {1201.3690},
+ primaryClass = "astro-ph.IM",
+ keywords = {methods: data analysis},
+     year = 2012,
+    month = feb,
+   volume = 29,
+    pages = {301-308},
+      doi = {10.1071/AS11049},
+   adsurl = {http://adsabs.harvard.edu/abs/2012PASA...29..301W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012MNRAS.421.3242W,
+   author = {{Whiting}, M.~T.},
+    title = "{DUCHAMP: a 3D source finder for spectral-line data}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1201.2710},
+ primaryClass = "astro-ph.IM",
+ keywords = {methods: data analysis, techniques: image processing, surveys},
+     year = 2012,
+    month = apr,
+   volume = 421,
+    pages = {3242-3256},
+      doi = {10.1111/j.1365-2966.2012.20548.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.421.3242W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
