--- a/pubs/fellwalker/fellwalker.tex
+++ b/pubs/fellwalker/fellwalker.tex
@@ -368,6 +368,9 @@ the source code for the CUPID package is open-source and is available on github 
 
 Include some references to earlier investigations? \citep[e.g.][]{2010Watson}
 
+May want to consider \citep{2012PASA...29..301W} which uses
+DUCHAMP \citep[][ascl:1201.011]{2012MNRAS.421.3242W}.
+
 \subsection{Simulated Data}
 
 \subsection{Real Sub-millimetre Data}
